[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/imagens/inimigo.png" type="Texture" id=1]
[ext_resource path="res://scripts/personagens/Inimigo.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagem:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "andando"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagem:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "parado"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Imagem:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.34375, 3.375 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.82769, 3.79309 )

[node name="Inimigo" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Imagem" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "parado"
playback_speed = 2.0
anims/RESET = SubResource( 1 )
anims/andando = SubResource( 2 )
anims/parado = SubResource( 3 )

[node name="CollisionInimigo" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 70, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
